--- a/index.html
+++ b/index.html
@@ -1,43 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Sentient Memory Match</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>🧠 Sentient Memory Match</title>
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <!-- Start Screen -->
-  <div id="start-screen">
-    <h1>🧠 Sentient Memory Match</h1>
-    <p>Select Difficulty:</p>
-    <div class="buttons">
-      <button onclick="startGame(4)">Easy (4x4)</button>
-      <button onclick="startGame(6)">Medium (6x6)</button>
-      <button onclick="startGame(8)">Hard (8x8)</button>
-      <button onclick="startGame(10)">Extreme (10x10)</button>
-    </div>
+  <h1>🧠 Sentient Memory Match</h1>
+
+  <!-- Stats -->
+  <div class="stats">
+    <span id="moves">Moves: 0</span>
+    <span id="timer">Time: 0s</span>
+  </div>
+
+  <!-- Mode Selection -->
+  <div class="mode-select" id="modeSelect">
+    <button onclick="selectMode(4)">Easy (4×4)</button>
+    <button onclick="selectMode(6)">Normal (6×6)</button>
+    <button onclick="selectMode(8)">Hard (8×8)</button>
+    <button onclick="selectMode(10)">Extreme (10×10)</button>
   </div>
 
   <!-- Countdown -->
   <div id="countdown"></div>
 
-  <!-- Game Container -->
-<div id="game" class="hidden">
-  <header>
-    <h1>🧠 Sentient Memory Match</h1>
-    <div class="stats">
-      <span id="moves">Moves: 0</span>
-      <span id="timer">Time: 0s</span>
+  <!-- Game Board Wrapper -->
+  <div id="game" class="hidden">
+    <div class="board-wrapper">
+      <div id="game-board" class="board"></div>
+      <button id="restart" onclick="restartGame()">Restart</button>
     </div>
-  </header>
-
-  <div class="board-wrapper">
-    <div id="game-board" class="board"></div>
-    <button id="restart" onclick="restartGame()">Restart</button>
   </div>
-</div>
-
 
   <script src="script.js"></script>
 </body>
