--- a/index.html
+++ b/index.html
@@ -7,49 +7,31 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <header>
+  <div class="container">
     <h1>🧠 Sentient Memory Match</h1>
-  </header>
-
-  <!-- Introduction Section -->
-  <section id="intro">
-    <p>
+    <p class="description">
       Welcome to <strong>Sentient Memory Match</strong>!  
-      Test your memory by matching pairs of cards before time runs out.  
-      Choose a difficulty mode to begin your challenge.
+      Test your brain by matching pairs of cards before time runs out.  
+      Choose a difficulty level to begin your challenge.
     </p>
-    <button id="startIntroBtn">Select Difficulty</button>
-  </section>
 
-  <!-- Mode Selection Section -->
-  <section id="modeSelection" class="hidden">
-    <h2>Select Difficulty</h2>
-    <div class="mode-select">
-      <button onclick="selectMode(4)">Easy (4×4)</button>
-      <button onclick="selectMode(6)">Normal (6×6)</button>
-      <button onclick="selectMode(8)">Hard (8×8)</button>
-      <button onclick="selectMode(10)">Extreme (10×10)</button>
-    </div>
-    <button id="playBtn" class="hidden">Play</button>
-  </section>
-
-  <!-- Countdown Section -->
-  <section id="countdownSection" class="hidden">
-    <h2 id="countdown">3</h2>
-  </section>
-
-  <!-- Game Section -->
-  <section id="gameSection" class="hidden">
-    <div class="stats">
-      <span id="moves">Moves: 0</span>
-      <span id="timer">Time: 0s</span>
+    <div id="menu">
+      <select id="difficulty">
+        <option value="" disabled selected>Select Difficulty</option>
+        <option value="easy">Easy (4x4)</option>
+        <option value="medium">Medium (6x6)</option>
+        <option value="hard">Hard (8x8)</option>
+      </select>
+      <button id="play-btn">Play</button>
     </div>
 
-    <div class="board-wrapper">
-      <div id="game-board" class="board"></div>
-      <button id="restart" class="hidden">Restart</button>
+    <div id="game-board" class="hidden"></div>
+
+    <div id="controls" class="hidden">
+      <button id="restart-btn">Restart</button>
+      <p id="timer">Time: <span id="time">0</span>s</p>
     </div>
-  </section>
+  </div>
 
   <script src="script.js"></script>
 </body>
