--- a/index.html
+++ b/index.html
@@ -1,31 +1,38 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <title>Sentient Memory Match</title>
-  <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>🧠 Sentient Memory Match</title>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <div class="game-container">
-    <h1>🧠 Sentient Memory Match</h1>
-    <p>Test your sentient brain! Match pairs before time runs out.<br>
-       Choose your challenge and start.</p>
+  <div class="container">
+    <h1 class="title">🧠 Sentient Memory Match</h1>
+    <p class="desc">
+      Test your sentient brain! Match pairs before time runs out.<br>
+      Choose your challenge and start.
+    </p>
 
-    <div id="mode-selection">
-      <button onclick="startGame('easy')">Easy (4x4)</button>
-      <button onclick="startGame('medium')">Medium (6x6)</button>
-      <button onclick="startGame('hard')">Hard (8x8)</button>
-      <button onclick="startGame('extreme')">Extreme (10x10)</button>
+    <div class="menu">
+      <select id="difficulty">
+        <option value="4">Easy (4x4)</option>
+        <option value="6">Medium (6x6)</option>
+        <option value="8">Hard (8x8)</option>
+        <option value="10">Extreme (10x10)</option>
+      </select>
+      <button id="startBtn">Start</button>
     </div>
 
-    <div id="game-ui" style="display:none;">
-      <div id="timer">Time: 0s</div>
-      <div id="countdown"></div>
-      <div id="game-board"></div>
+    <div id="countdown" class="countdown hidden">3</div>
 
-      <button id="restart-button" onclick="restartGame()">Restart</button>
+    <div id="gameArea" class="game-area hidden">
+      <div id="timer" class="timer"></div>
+      <div id="gameBoard" class="game-board"></div>
+      <button id="restartBtn" class="hidden restart-btn">Restart</button>
     </div>
   </div>
+
   <script src="script.js"></script>
 </body>
 </html>
