--- a/index.html
+++ b/index.html
@@ -40,6 +40,13 @@
   </div>
 
   <!-- Popup for Win/Lose -->
+<!-- Popup for Win/Lose -->
+<div id="popup" class="popup hidden">
+  <div class="popup-content">
+    <h2 id="popupMessage">You Win!</h2>
+    <button id="popupClose">OK</button>
+  </div>
+</div>
 
 
   <script src="script.js"></script>
