--- a/index.html
+++ b/index.html
@@ -14,7 +14,6 @@
       Choose your challenge and start.
     </p>
 
-    <!-- Menu -->
     <div class="menu">
       <select id="difficulty">
         <option value="4">Easy (4x4)</option>
@@ -25,10 +24,8 @@
       <button id="startBtn">Start</button>
     </div>
 
-    <!-- Countdown -->
     <div id="countdown" class="countdown hidden">3</div>
 
-    <!-- Game Area -->
     <div id="gameArea" class="game-area hidden">
       <div id="timer" class="timer"></div>
       <div id="gameBoard" class="game-board"></div>
@@ -37,18 +34,16 @@
         <button id="restartBtn" class="restart-btn hidden">Restart</button>
       </div>
     </div>
-  </div>
+   </div>
 
-  <!-- Popup for Win/Lose -->
-<!-- Popup for Win/Lose -->
-<div id="popup" class="popup hidden">
-  <div class="popup-content">
-    <h2 id="popupMessage">You Win!</h2>
-    <button id="popupClose">OK</button>
-  </div>
-</div>
+   <div id="popup" class="popup hidden">
+   <div class="popup-content">
+     <h2 id="popupMessage">You Win!</h2>
+     <button id="popupClose">OK</button>
+     </div>
+   </div>
 
-
-  <script src="script.js"></script>
+   <script src="fall.js"></script>
+   <script src="script.js"></script>
 </body>
 </html>
