--- a/index.html
+++ b/index.html
@@ -1,48 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>🏓 Sentient Pong</title>
-    <link rel="stylesheet" href="style.css" />
-  </head>
-  <body>
-    <canvas id="bgCanvas"></canvas>
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <title>Sentient Pong</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <canvas id="bgCanvas"></canvas>
+  <div id="menu">
+    <h1>🏓 Sentient Pong</h1>
+    <p>
+      <strong>How to Play:</strong><br>
+      The ball bounces off the top and bottom walls.<br>
+      Keep it alive as long as possible!<br>
+      If it goes out of the left or right side, you lose.<br>
+      <strong>Score = survival time.</strong>
+    </p>
 
-    <div id="menu">
-      <h1>🏓 Sentient Pong</h1>
-      <p>
-        <strong>How to Play:</strong><br />
-        The ball bounces off the top and bottom walls.<br />
-        Keep it alive as long as possible!<br />
-        If it goes out of the left or right side, you lose.<br />
-        <strong>Score = survival time.</strong>
-      </p>
+    <label for="difficulty">Choose Difficulty:</label>
+    <select id="difficulty">
+      <option value="easy" selected>Easy</option>
+      <option value="normal">Normal</option>
+      <option value="hard">Hard</option>
+    </select>
 
-      <label for="difficulty">Choose Difficulty:</label>
-      <select id="difficulty">
-        <option value="easy" selected>Easy</option>
-        <option value="normal">Normal</option>
-        <option value="hard">Hard</option>
-      </select>
+    <br/><br/>
+    <button id="startBtn">Start Game</button>
+  </div>
 
-      <br /><br />
-      <button id="startBtn">Start Game</button>
-    </div>
+  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <div id="gameOver" class="hidden">
+    <h2 id="winner"></h2>
+    <button id="restartBtn">Play Again</button>
+  </div>
 
-    <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <div id="footer">
+    Made with ❤️ by 
+    <a href="https://twitter.com/0xBalls" target="_blank">@0xBalls</a>
+  </div>
 
-    <div id="gameOver" class="hidden">
-      <h2 id="winner"></h2>
-      <button id="restartBtn">Play Again</button>
-    </div>
-
-    <div id="footer">
-      Made with ❤️ by
-      <a href="https://twitter.com/0xBalls" target="_blank">@0xBalls</a>
-    </div>
-
-    <script src="fall.js"></script>
-    <script src="game.js"></script>
-  </body>
+  <script src="fall.js"></script>
+  <script src="game.js"></script>
+</body>
 </html>
