--- a/index.html
+++ b/index.html
@@ -1,52 +1,39 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>🏓 Sentient Pong</title>
-  <link rel="stylesheet" href="style.css" />
-</head>
-<body>
-  <!-- Background snowfall canvas -->
-  <canvas id="bgCanvas"></canvas>
+<canvas id="bgCanvas"></canvas>
 
-  <!-- Menu -->
-  <div id="menu">
-    <h1>🏓 Sentient Pong</h1>
-    <p>
-      <strong>How to Play:</strong><br>
-      The ball bounces off the top and bottom walls.<br>
-      Keep it alive as long as possible!<br>
-      If it goes out of the left or right side, you lose.<br>
-      <strong>Score = survival time.</strong>
-    </p>
+<div id="menu" class="menu">
+  <h1>Sentient Pong</h1>
+  <p><strong>How to Play:</strong><br>
+  The ball bounces off the top and bottom walls.<br>
+  Keep it alive as long as possible!<br>
+  If it goes out of the left or right side, you lose.<br>
+  <strong>Score = survival time.</strong></p>
 
-    <label for="difficulty">Choose Difficulty:</label>
-    <select id="difficulty">
-      <option value="easy" selected>Easy</option>
-      <option value="normal">Normal</option>
-      <option value="hard">Hard</option>
-    </select>
-    <br><br>
-    <button id="startBtn">Start Game</button>
-  </div>
+  <label for="difficulty">Choose Difficulty:</label>
+  <select id="difficulty">
+    <option value="4">Easy</option>
+    <option value="6" selected>Normal</option>
+    <option value="8">Hard</option>
+    <option value="10">Insane</option>
+  </select>
 
-  <!-- Main Game Canvas -->
-  <canvas id="gameCanvas" width="800" height="500"></canvas>
+  <br>
+  <button id="startBtn">Start Game</button>
+</div>
 
-  <!-- Game Over -->
-  <div id="gameOver" class="hidden">
-    <h2 id="winner"></h2>
-    <button id="restartBtn">Play Again</button>
-  </div>
+<div id="countdown" class="hidden"></div>
 
-  <!-- Footer -->
-  <div id="footer">
-    Made with ❤️ by 
-    <a href="https://twitter.com/0xBalls" target="_blank">@0xBalls</a>
-  </div>
+<div id="gameArea" class="hidden">
+  <div id="timer"></div>
+  <div id="gameBoard" class="game-board"></div>
+  <button id="restartBtn" class="hidden">Restart</button>
+  <button id="backBtn" class="hidden">Back</button>
+</div>
 
-  <script src="fall.js"></script>
-  <script src="game.js"></script>
-</body>
-</html>
+<div id="popup" class="hidden">
+  <p id="popupMessage"></p>
+  <button id="popupClose">Close</button>
+</div>
+
+<footer id="footer">
+  Made with 💖 by <a href="#">@0xBalls</a>
+</footer>
