--- a/index.html
+++ b/index.html
@@ -1,39 +1,56 @@
-<canvas id="bgCanvas"></canvas>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Sentient Pong</title>
+  <link rel="stylesheet" href="style.css" />
+</head>
+<body>
+  <canvas id="bgCanvas"></canvas>
 
-<div id="menu" class="menu">
-  <h1>Sentient Pong</h1>
-  <p><strong>How to Play:</strong><br>
-  The ball bounces off the top and bottom walls.<br>
-  Keep it alive as long as possible!<br>
-  If it goes out of the left or right side, you lose.<br>
-  <strong>Score = survival time.</strong></p>
+  <!-- ====== MENU ====== -->
+  <div id="menu" class="menu">
+    <h1>🎯 Sentient Pong</h1>
+    <p><strong>How to Play:</strong><br>
+      The ball bounces off the top and bottom walls.<br>
+      Keep it alive as long as possible!<br>
+      If it goes out of the left or right side, you lose.<br>
+      <strong>Score = survival time.</strong>
+    </p>
 
-  <label for="difficulty">Choose Difficulty:</label>
-  <select id="difficulty">
-    <option value="4">Easy</option>
-    <option value="6" selected>Normal</option>
-    <option value="8">Hard</option>
-    <option value="10">Insane</option>
-  </select>
+    <label for="difficulty">Choose Difficulty:</label><br />
+    <select id="difficulty">
+      <option value="4">Easy</option>
+      <option value="6" selected>Normal</option>
+      <option value="8">Hard</option>
+      <option value="10">Insane</option>
+    </select>
+    <br>
+    <button id="startBtn">Start Game</button>
+  </div>
 
-  <br>
-  <button id="startBtn">Start Game</button>
-</div>
+  <!-- ====== COUNTDOWN ====== -->
+  <div id="countdown" class="hidden"></div>
 
-<div id="countdown" class="hidden"></div>
+  <!-- ====== GAME AREA ====== -->
+  <div id="gameArea" class="hidden">
+    <div id="timer"></div>
+    <div id="gameBoard" class="game-board"></div>
+    <button id="restartBtn" class="hidden">Restart</button>
+    <button id="backBtn" class="hidden">Back</button>
+  </div>
 
-<div id="gameArea" class="hidden">
-  <div id="timer"></div>
-  <div id="gameBoard" class="game-board"></div>
-  <button id="restartBtn" class="hidden">Restart</button>
-  <button id="backBtn" class="hidden">Back</button>
-</div>
+  <!-- ====== POPUP ====== -->
+  <div id="popup" class="hidden">
+    <p id="popupMessage"></p>
+    <button id="popupClose">Close</button>
+  </div>
 
-<div id="popup" class="hidden">
-  <p id="popupMessage"></p>
-  <button id="popupClose">Close</button>
-</div>
+  <footer id="footer">
+    Made with 💖 by <a href="#">@0xBalls</a>
+  </footer>
 
-<footer id="footer">
-  Made with 💖 by <a href="#">@0xBalls</a>
-</footer>
+  <script src="script.js"></script>
+</body>
+</html>
