--- a/index.html
+++ b/index.html
@@ -44,12 +44,14 @@
   </div>
 
   <!-- Popup -->
-  <div id="popup" class="popup hidden">
-    <div class="popup-content">
-      <h2 id="popupMessage">You Win!</h2>
-      <button id="popupClose">OK</button>
-    </div>
-  </div>
+<div class="dropdown-container">
+  <select id="difficulty">
+    <option value="easy">Easy</option>
+    <option value="medium">Medium</option>
+    <option value="hard">Hard</option>
+  </select>
+</div>
+
 
   <script src="fall.js"></script>
   <script src="script.js"></script>
