--- a/index.html
+++ b/index.html
@@ -7,8 +7,6 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-  <canvas id="bgCanvas"></canvas>
-
   <div class="container">
     <h1 class="title">🧠 Sentient Memory Match</h1>
     <p class="desc">
@@ -16,20 +14,21 @@
       Choose your challenge and start.
     </p>
 
+    <!-- Menu -->
     <div class="menu">
-      <div class="dropdown-container">
-        <select id="difficulty">
-          <option value="4">Easy (4x4)</option>
-          <option value="6">Medium (6x6)</option>
-          <option value="8">Hard (8x8)</option>
-          <option value="10">Extreme (10x10)</option>
-        </select>
-      </div>
+      <select id="difficulty">
+        <option value="4">Easy (4x4)</option>
+        <option value="6">Medium (6x6)</option>
+        <option value="8">Hard (8x8)</option>
+        <option value="10">Extreme (10x10)</option>
+      </select>
       <button id="startBtn">Start</button>
     </div>
 
+    <!-- Countdown -->
     <div id="countdown" class="countdown hidden">3</div>
 
+    <!-- Game Area -->
     <div id="gameArea" class="game-area hidden">
       <div id="timer" class="timer"></div>
       <div id="gameBoard" class="game-board"></div>
@@ -40,6 +39,7 @@
     </div>
   </div>
 
+  <!-- Popup for Win/Lose -->
   <div id="popup" class="popup hidden">
     <div class="popup-content">
       <h2 id="popupMessage">You Win!</h2>
@@ -47,7 +47,6 @@
     </div>
   </div>
 
-  <script src="fall.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
