--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
       <button id="popupClose">OK</button>
     </div>
   </div>
-
+  <script src="fall.js"></script>
   <script src="script.js"></script>
 </body>
 </html>
