--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
+  <canvas id="bgCanvas"></canvas>
   <div class="container">
     <h1 class="title">🧠 Sentient Memory Match</h1>
     <p class="desc">
