--- a/index.html
+++ b/index.html
@@ -41,6 +41,12 @@
       <button id="popupClose">OK</button>
     </div>
   </div>
+
+    <div id="footer">
+    Made with ❤️ by 
+    <a href="https://twitter.com/0xBalls" target="_blank">@0xBalls</a>
+  </div>
+  
   <script src="fall.js"></script>
   <script src="script.js"></script>
 </body>
